--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -5,22 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HEIT/Nosotros</title>
+    <link rel="stylesheet" href="../estilos.css">
 </head>
 <body>
     <header>
         <nav>
-            <ul>
+            <input type="checkbox" id="check">
+            <label for="check" class="bar-btn">
+                <i class="fas fa-bars"></i>
+            </label>
+            <ul class="nav-menu">
                 <li>
                     <a href="../index.html">Inicio</a>
                 </li>
                 <li>
                     <a href="./categorias.html">Categorias</a>
+                    
                 </li>
                 <li>
-                    <a href="./productos.html">Productos</a>
+                    <a href="./preguntas.html">Como Comprar</a>
                 </li>
                 <li>
-                    <a href="./nosotros.html">Nosotrsos</a>
+                    <a href="./nosotros.html">Nosotros</a>
                 </li>
                 <li>
                     <a href="./contacto.html">Contacto</a>
@@ -28,19 +34,21 @@
             </ul>
         </nav>
     </header>
-    <main> <h3>Nosotros</h3>
+    <main>
+        <div class="cubo-texto">
+        <h1>Nosotros</h1>
     <p>Somos una empresa que nos dedicamos a la comercialización y distribución de 
         artículos de limpieza, tanto hogareña como institucional</p>
-        <p>Ofrecemos la más amplia variedad de productos combinando excelentes precios y 
+    <p>Ofrecemos la más amplia variedad de productos combinando excelentes precios y 
             una inmejorable calidad</p>
-            <p>Brindamos asesoramiento en el uso y aplicación de cada producto y damos una 
+    <p>Brindamos asesoramiento en el uso y aplicación de cada producto y damos una 
                 solución integral a sus requerimientos de limpieza tanto para el hogar, como para 
                 empresas o diferentes instituciones: colegios, consorcios, hoteles, restaurantes, 
                 cervecerías, centros médicos y geriátricos</p>
-                <p>Porque en heit, sabemos de limpieza.</p>
+    <p>Porque en heit, sabemos de limpieza.</p>
+        </div>
     </main>
-    <footer>
-        <hr/>
+    <footer class="footer">
         <h3>Copyright 2021 - Todos los derechos reservados. | Diseño Web nahuel moyano</h3>
     </footer>               
 
