--- a/paginas/preguntas.html
+++ b/paginas/preguntas.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HEIT/Contacto</title>
+    <title>HEIT/Productos</title>
     <link rel="stylesheet" href="../estilos.css">
 </head>
 <body>
@@ -35,20 +35,20 @@
         </nav>
     </header>
     <main>
-        <div class="cuadro-contacto">
-        <form action="">
-            <h1>contactanos</h1>
-                <label for="nombre"></label>
-                    <input type ="text" value=""placeholder="agrega tu nombre"><br>
-                <label for="email"></label>
-                    <input type ="text" value=""placeholder="agrega tu email"><br>
-                <input type="button" value="enviar">
-        </form>
-        </div> 
+        <h1>Como comprar</h1>
+        <div class="preguntas">
+            <h2>Registrá tu usuario</h2>
+            <p>Registrarte en Productos HEIT, ingresa tus datos, y te enviaremos un email para verificar tu dirección de correo</p>
+            <h2>Elegí tus productos</h2>
+            <p>Seleccioná los productos que quieras, agregalos al carrito y clickeá en el botón “Pasar por caja”.</p>
+            <h2>Pagá y elegí la forma de envío</h2>
+            <p>Ingresá tus datosy elegí el horario de entrega. Por ultímo elegí como queres pagar. Tu pago se procesará de forma segura mediante Mercado Pago</p>
+            <h2>Recibí tu pedido</h2>
+            <p>En el día acordado nuestras camionetas te estarán entregando tu pedido en tu domicilio. Te pedimos que hagas todo lo posible para poder recibir el pedido en tiempo y forma.</p>
+        </div>
     </main>
     <footer class="footer">
         <h3>Copyright 2021 - Todos los derechos reservados. | Diseño Web nahuel moyano</h3>
     </footer>
-    
 </body>
 </html>
