--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos HEIT</title>
+    <meta name="description" content="Somos una empresa que nos dedicamos a la comercialización y distribución de 
+    artículos de limpieza, tanto hogareña como institucional">
+    <meta name="keywords" content="Productos, limpieza, hogar">
     <link rel="stylesheet" href="./estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/a90613b44b.js" crossorigin="anonymous"></script>
