--- a/paginas/categorias.html
+++ b/paginas/categorias.html
@@ -7,6 +7,7 @@
     <title>HEIT/Categorias</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../estilos.css">
+    <link rel="stylesheet" href="../estilossas.css">
 </head>
 <body>
     <header>
@@ -20,8 +21,7 @@
                     <a href="../index.html">Inicio</a>
                 </li>
                 <li>
-                    <a href="./categorias.html">Categorias</a>
-                    
+                    <a href="./categorias.html">Categorias</a> 
                 </li>
                 <li>
                     <a href="./preguntas.html">Como Comprar</a>
@@ -39,19 +39,20 @@
             <h1 class="text-center py-5 display-5">Categorias</h1>
                 <div class="row text-center">
                     <div class="col-sm-12 col-md-6 col-lg-6">
-                        <h4 class="alto aling-items-center text-center "><a href="./accesorios.html">Accesorios</a></h4>
+                        <div class="alto-1 aling-items-center text-center "><a href="./accesorios.html" class="alto-a-1">Accesorios</a></div>
                     </div>
                     <div class="col-sm-12 col-md-6 col-lg-6">
-                        <h4 class="alto aling-items-center text-center "><a href="./aromatizantes.html">Aromatizantes</a></h4>
+                        <div class="alto-2 aling-items-center text-center "><a href="./aromatizantes.html" class="alto-a-2">Aromatizantes</a></div>
                     </div>
                 </div>
-                <div class="row alto aling-items-center">
+                <div class="row aling-items-center">
                     <div class="col-sm-12 col-md-6 col-lg-6">
-                        <h4 class="alto aling-items-center text-center "><a href="./muebles.html">Muebles</a></h4>
+                        <div class="alto-3 aling-items-center text-center "><a href="./muebles.html" class="alto-a-3">Muebles</a></div>
                     </div>
                     <div class="col-sm-12 col-md-6 col-lg-6">
-                        <h4 class="alto aling-items-center text-center "><a href="./pisos.html">Pisos</a></h4>
+                        <div class="alto-4 aling-items-center text-center "><a href="./pisos.html" class="alto-a-4">Pisos</a></div>
                     </div> 
+                </div>
     </main>
     <footer class="footer">
         <p>Copyright 2021 - Todos los derechos reservados. | Diseño Web nahuel moyano</p>
