--- a/paginas/muebles.html
+++ b/paginas/muebles.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HEIT/Contacto</title>
+    <title>HEIT/Productos</title>
     <link rel="stylesheet" href="../estilos.css">
 </head>
 <body>
@@ -35,20 +35,26 @@
         </nav>
     </header>
     <main>
-        <div class="cuadro-contacto">
-        <form action="">
-            <h1>contactanos</h1>
-                <label for="nombre"></label>
-                    <input type ="text" value=""placeholder="agrega tu nombre"><br>
-                <label for="email"></label>
-                    <input type ="text" value=""placeholder="agrega tu email"><br>
-                <input type="button" value="enviar">
-        </form>
-        </div> 
+        <h1>Muebles</h1>
+        <div class="producto">
+            <section class="productos-alineacion">
+                <img src="../imagenes/muebles-01.jpg" alt="muebles">
+                <div class="cubo1">
+                    <p>producto 1</p>
+                    <p>$000</p>
+                </div>
+            </section>
+            <section class="productos-alineacion">
+                <img src="../imagenes/muebles-02.jpg" alt="muebles">
+                <div class="cubo1">
+                    <p>producto 2</p>
+                    <p>$000</p>
+                </div>
+            </section>
+        </div>
     </main>
     <footer class="footer">
         <h3>Copyright 2021 - Todos los derechos reservados. | Diseño Web nahuel moyano</h3>
     </footer>
-    
 </body>
 </html>
